# smcmanager

./: .gitignore  Cargo.toml
src/: cmd.rs  executor.rs  main.rs  manifest.rs  service.rs  template.rs  work.rs
