[package]
name = "smcmanager"
version = "0.1.0"
edition = "2021"
author = "Krysztal112233 <suibing112233@outlook.com>"
homepage = "github.com/OakMemory/SMCManager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26" }
clap = { version = "4.3", features = ["derive", "cargo", "string"] }
human-panic = "1.1.5"
once_cell = "1.18.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7"
walkdir = "2.3.3"
